[package]
name = "CS-2364-Final-Project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.13.2", features = ["dynamic_linking"]}
bevy_prototype_lyon = "0.11.0"
tokio = { version = "1.37.0", features = ["full"] }


[profile.dev]
opt-level = 1


[profile.dev.package."*"]
opt-level = 3
