[package]
name = "CS-2364-Final-Project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.8.0"
bevy = { version="0.8.0", features= ["trace"]}
bevy_prototype_lyon = "0.6.0"
bevy_egui = "0.15"
web-sys = "0.3.59"
bevy_prototype_debug_lines = "0.8"


[profile.dev]
opt-level = 1


[profile.dev.package."*"]
opt-level = 3
